--- a/main.html
+++ b/main.html
@@ -8,7 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	
     <script type="text/javascript" src="./script.js">
+<ol>
+	<li data-ns-test="shoppingList">laptop</li>
+		<li data-ns-test="shoppingList">bike</li>
+		<li data-ns-test="shoppingList">phone</li>
+	</ol>
+		<ul>
+	<li data-ns-test="holidayList">aamer</li>
+		<li data-ns-test="holidayList">delhi</li>
+		<li data-ns-test="holidayList">gujrat</li>
+
+	</ul>
 </script>
 
 </body>
